# bevy_jam_4

./: .gitignore  CONCEPT.md  Cargo.toml  README.md  pre-commit
.github/workflows/: ci.yaml  release.yaml
assets/other/: index.html
assets/shaders/: tower_radius.wgsl  wind_test.wgsl
assets/textures/: bunchastuff.aseprite  core.aseprite  fired.asesprite.aseprite  radar.aseprite  sucky-uppy.aseprite  terrain.aseprite  tileset-1.aseprite  title.aseprite  tower-export.aseprite  trees.aseprite
docs/: game_design.md
examples/: quad.rs
scripts/: build.ps1  build.sh  run.ps1  run_windows.ps1
src/: camera.rs  camera_BROKEN.rs  eargasm.rs  game.rs  gpu_entities.rs  keybinds.rs  lib.rs  main.rs  placement.rs  power.rs  resources.rs  towers.rs  wind.rs
src/buildings/: core.rs  distribution.rs  drain.rs  mod.rs  radar.rs
src/components/: button.rs  fade_transition.rs  mod.rs  ui_util.rs
src/creeps/: mod.rs
src/debug/: display_debug.rs  fps_counter.rs  mod.rs  resolution.rs
src/game/: camera.rs  depletion.rs  hp_bars.rs  hud.rs  keybinds.rs  map.rs  mod.rs  placement.rs  power.rs  resources.rs  towers.rs
src/global_systems/: eargasm.rs  fade_transition.rs  mod.rs  ui_util.rs
src/gpu_entities/: instancing.rs  pipeline.rs  plugin.rs
src/menus/: mainmenu.rs  mod.rs  splash.rs
src/scenes/: dev_scene.rs  game_over.rs  gameplay.rs  gpu_test.rs  mainmenu.rs  menu.rs  mod.rs  pause.rs  splash.rs
wasm/: index.html
wasm/assets/other/: index.html
wasm/assets/textures/: bunchastuff.aseprite  sucky-uppy.aseprite  terrain.aseprite  tower.aseprite  ui.aseprite
